Fix a couple small layout issues.
1.  Make `hr` share the bottom-margin size that other items in articles
    get, so that it's visually consistent. (TODO: extract this to a SCSS
    variable so it's defined just once.)
2.  Set `pre code` to `display: block` so that the syntax highlighting
    does not trigger reflow. This will become mostly irrelevant once
    that happens at render, but is good regardless.
3.  Related, move all the rules off of `.hljs` and onto `pre code`.
4.  Make code sample fill horizontal space perfectly on small screens
    and then gracefully 'unstick' visually as it scales up.

--- a/sass/_color-scheme.scss
+++ b/sass/_color-scheme.scss
@@ -2,13 +2,6 @@
 @import "./syntax-highlighting/a11y-light";
 @import "./syntax-highlighting/tomorrow-night-bright";
 
-.hljs {
-   display: block;
-   overflow-x: auto;
-   background: var(--code-background);
-   color: var(--code-foreground);
-}
-
 @mixin light {
    // Colors
    --bg: var(--gray-6);
