--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -50,20 +50,22 @@ article {
          left: -#{ms(-2)};
          bottom: 1rem;
       }
-      width: 100%;
+      width: 100vw;
       max-width: 100vw;
-   }
 
-   pre code {
-      font-size: ms(-1);
-      line-height: ms(2);
-
-      width: 100%;
-      margin: 0 0;
-      padding: ms(-4);
-      overflow-x: scroll;
-
-      border-left: 3px solid var(--code-outline);
+      code {
+         display: block;
+         overflow-x: auto;
+         width: 100%;
+         margin: 0 0;
+         padding: ms(-4);
+   
+         background: var(--code-background);
+         color: var(--code-foreground);      
+         font-size: ms(-1);
+         line-height: ms(2);
+         border-left: 3px solid var(--code-outline);
+      }
    }
 
    a {
@@ -88,10 +90,14 @@ article {
          style: italic;
       }
    }
+
+   hr {
+      margin-bottom: ms(0);
+   }
 }
 
 @media screen {
-   @media (min-width: $width - 2rem) {
+   @media (min-width: 32.6667rem) {
       article pre {
          max-width: $width;
          align-self: center;
